# ncaptura

./: .gitignore  AGENTS.md  Cargo.toml  PKGBUILD  README.md
src/: app.rs  capture.rs  cli.rs  interactive_dialog.rs  main.rs  save_dialog.rs
src/capture/: command_utils.rs  mod.rs  output.rs  recording.rs  screenshot.rs  state.rs  windows.rs
src/ui/: cli_recording_hud.rs  interactive_dialog.rs  mod.rs  recording_hud.rs  save_dialog.rs  window_picker.rs
