[package]
name = "ncaptura"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { package = "libadwaita", version = "0.8" }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6.0"
gtk = { package = "gtk4", version = "0.10" }
gtk4-layer-shell = "0.7"
nix = { version = "0.30", features = ["signal", "process"] }
serde_json = "1.0"
